[workspace]
members = [
    "dfs/data-node",
    "dfs/main-server",

    "session-server",
    "enterprise"
]

[workspace.dependencies]
axum = { version = "0.6.0-rc.2" }
clap = { version = "4.0.18", features = ["derive"] }
dotenv = { version = "0.15.0" }
futures = { version = "0.3.25" }
hyper = { version = "0.14", features = ["full"] }
prost = { version = "0.11.0" }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8.2" }
tower = { version = "0.4.13", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[workspace.build-dependencies]
tonic-build = { version = "0.8.2", features = ["prost"] }