[package]
name = "cloud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait.workspace = true
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tonic.workspace = true
tonic-error.workspace = true