[package]
name = "cloud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait.workspace = true
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { workspace = true, features = ["io-util"] }
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-build.workspace = true