[package]
name = "data-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
futures.workspace = true
clap= { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs", "io-util"] }

rand = { version = "0.8.5" }