[package]
name = "data-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap= { workspace = true, features = ["derive"] }
futures.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "signal"] }
tower.workspace = true
tonic.workspace = true
tonic-web.workspace = true
prost.workspace = true
prost-types.workspace = true

rand = { version = "0.8.5" }

[build-dependencies]
tonic-build = { version = "0.8.2", features = ["prost"] }