[package]
name = "data-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap= { workspace = true, features = ["derive"] }
cloud-api = { path = "../cloud-api" }
futures.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "signal"] }
tower.workspace = true
tonic.workspace = true
tonic-web.workspace = true
prost.workspace = true
prost-types.workspace = true
uuid = { version = "1.2.2", features = ["fast-rng", "serde", "v4", "zerocopy"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }

[build-dependencies]
tonic-build = { version = "0.8.2", features = ["prost"] }