[package]
name = "main-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap= { workspace = true, features = ["derive"] }
cloud-api = { path = "../cloud-api" }
futures.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "signal"] }
tower.workspace = true
tonic.workspace = true
tonic-web.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prost.workspace = true
prost-types.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build.workspace = true